--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>My Tasks</h1>
 <% @tasks.each do |task| %>
   <li><%= link_to task.title, task_path(task) %>
-  <%= link_to "Delete Task", task_path(task),
+  <%= link_to "🗑️", task_path(task),
    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
 <% end %>
 <ul>
